fix(foxplayer): vertical scrollbar flash handled in css

--- a/week-10/foxplayer/style/main.css
+++ b/week-10/foxplayer/style/main.css
@@ -4,6 +4,10 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
+body {
+    overflow-y: hidden;
+}
+
 container {
     width: 700px;
     height: 400px;
